--- a/services.html
+++ b/services.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Git learning by making practice in pairs</h1>
     <p>I love coding as my future career</p>
+    <span>Another changes</span>
 </body>
 </html>
